# KSAA2026-Fine-Tashkeel

./: .gitignore  README.md  pyproject.toml  requirements.txt
analysis/: error_examples.py  eval_dev_all_models.py  eval_per_nationality.py  generate_figures.py
notebooks/: 00_submission_creator.ipynb  01_infer_fine_tashkeel.ipynb  01_train_fine_tashkeel.ipynb  02_infer_mushkil_arat5.ipynb  02_train_artst_asr.ipynb  03_infer_flan_t5_tashkeel.ipynb  03_train_catt_tashkeel.ipynb  04_infer_catt_tashkeel.ipynb  04_train_mushkil_arat5.ipynb  05_infer_arat5_base.ipynb  05_train_fine_tashkeel.ipynb  06_infer_arabert_token.ipynb  06_train_tashkeel_700m.ipynb  07_infer_marbert.ipynb  07_train_byt5_glonor.ipynb  08_infer_sadeed.ipynb  08_train_artst_v3.ipynb  09_infer_whisper_multimodal.ipynb  09_train_whisper_tashkeel.ipynb  10_infer_tarteel_whisper_quran.ipynb  10_train_catt_whisper_fusion.ipynb  11_infer_diac_text_asr.ipynb  11_infer_mt5_arabic.ipynb  12_infer_byt5_glonor.ipynb  13_infer_ensemble_voting.ipynb  14_infer_ensemble_weighted.ipynb  15_infer_postprocess_rules.ipynb  16_infer_qwen_diacritization.ipynb  17_infer_whisper_quran_lora.ipynb  18_infer_seamless_m4t.ipynb  19_infer_artst_asr.ipynb  20_infer_shakkala.ipynb  21_infer_shakkelha.ipynb  22_infer_camel_mle.ipynb  23_infer_mishkal.ipynb  24_infer_asr_tashkeel.ipynb  24_train_infer.ipynb  25_apply_fine_tashkeel.ipynb
